--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -458,6 +458,8 @@ MaterialInterface="\"Object\" "
 MaterialParameterCollection="\"Object\" \"Object.Material.ScalarParameters\" \"Object.Material.VectorParameters\" \"Object.Material.VectorParameters.VectorParameters[0]\" "
 MaterialExpressionCollectionParameter="\"Object\" "
 MaterialExpression="\"Object\" "
+MaterialExpressionVertexColor="\"Object\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -473,6 +475,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter_BP.PlayerCharacter_BP
+OpenAssetsAtExit=/Game/Materials/Basic/M_SolidColor_Green.M_SolidColor_Green
 OpenAssetsAtExit=/Game/Blueprints/TestInteractables/BP_TestActor.BP_TestActor
 
 [PluginBrowser]
@@ -513,15 +516,17 @@ ContentBrowserTab1.JumpMRU=/All/Game/Audio
 ContentBrowserTab1.JumpMRU=/All/EngineData
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/TestInteractables/BP_TestActor
-MRUItem1=/Game/Inputs/IA_Interact
-MRUItem2=/Game/Inputs/IA_CharacterMovement
-MRUItem3=/Game/Interfaces/BPI_Interactions
-MRUItem4=/Game/Blueprints/PlayerCharacter_BP
-MRUItem5=/Game/Levels/DevMap
-MRUItem6=/Game/Inputs/IA_Look
-MRUItem7=/Game/Inputs/IA_Move
-MRUItem8=/Game/Blueprints/GM_Gamemode
+MRUItem0=/Game/Materials/Basic/M_SolidColor_Red
+MRUItem1=/Game/Materials/Basic/M_SolidColor_Green
+MRUItem2=/Game/Blueprints/TestInteractables/BP_TestActor
+MRUItem3=/Game/Inputs/IA_Interact
+MRUItem4=/Game/Inputs/IA_CharacterMovement
+MRUItem5=/Game/Interfaces/BPI_Interactions
+MRUItem6=/Game/Blueprints/PlayerCharacter_BP
+MRUItem7=/Game/Levels/DevMap
+MRUItem8=/Game/Inputs/IA_Look
+MRUItem9=/Game/Inputs/IA_Move
+MRUItem10=/Game/Blueprints/GM_Gamemode
 
 [DetailCategories]
 GM_Gamemode_C.Tick=True
@@ -1041,6 +1046,9 @@ PreviewMaterial.ImportSettings=True
 MaterialParameterCollection.Material=True
 MaterialExpressionCollectionParameter.General=True
 MaterialExpressionCollectionParameter.MaterialExpression=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/GM_Gamemode.GM_Gamemode=1
