Milestone - Machine Interaction System

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1288,Y=760)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@LAPTOPDELMATTSW
 LastExecutedLaunchName=LAPTOPDELMATTSW
 LastExecutedPIEPreviewDevice=
@@ -450,7 +450,7 @@ WmfMediaSettings="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 StaticMeshComponent="\"Object\" "
-BP_TestActor_C="\"Object.Default.MachineActors\" "
+BP_TestActor_C=
 Actor="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
@@ -460,10 +460,12 @@ MaterialExpressionCollectionParameter="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionVertexColor="\"Object\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
+BillboardComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -477,6 +479,8 @@ RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter_BP.PlayerCharacter_BP
 OpenAssetsAtExit=/Game/Materials/Basic/M_SolidColor_Green.M_SolidColor_Green
 OpenAssetsAtExit=/Game/Blueprints/TestInteractables/BP_TestActor.BP_TestActor
+OpenAssetsAtExit=/Game/Materials/Basic/M_SolidColor_Red.M_SolidColor_Red
+OpenAssetsAtExit=/Game/Materials/Basic/M_SolidColor_Blue.M_SolidColor_Blue
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -516,17 +520,18 @@ ContentBrowserTab1.JumpMRU=/All/Game/Audio
 ContentBrowserTab1.JumpMRU=/All/EngineData
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/Basic/M_SolidColor_Red
-MRUItem1=/Game/Materials/Basic/M_SolidColor_Green
-MRUItem2=/Game/Blueprints/TestInteractables/BP_TestActor
-MRUItem3=/Game/Inputs/IA_Interact
-MRUItem4=/Game/Inputs/IA_CharacterMovement
-MRUItem5=/Game/Interfaces/BPI_Interactions
-MRUItem6=/Game/Blueprints/PlayerCharacter_BP
-MRUItem7=/Game/Levels/DevMap
-MRUItem8=/Game/Inputs/IA_Look
-MRUItem9=/Game/Inputs/IA_Move
-MRUItem10=/Game/Blueprints/GM_Gamemode
+MRUItem0=/Game/Materials/Basic/M_SolidColor_Blue
+MRUItem1=/Game/Materials/Basic/M_SolidColor_Red
+MRUItem2=/Game/Materials/Basic/M_SolidColor_Green
+MRUItem3=/Game/Blueprints/TestInteractables/BP_TestActor
+MRUItem4=/Game/Inputs/IA_Interact
+MRUItem5=/Game/Inputs/IA_CharacterMovement
+MRUItem6=/Game/Interfaces/BPI_Interactions
+MRUItem7=/Game/Blueprints/PlayerCharacter_BP
+MRUItem8=/Game/Levels/DevMap
+MRUItem9=/Game/Inputs/IA_Look
+MRUItem10=/Game/Inputs/IA_Move
+MRUItem11=/Game/Blueprints/GM_Gamemode
 
 [DetailCategories]
 GM_Gamemode_C.Tick=True
@@ -1049,6 +1054,9 @@ MaterialExpressionCollectionParameter.MaterialExpression=True
 MaterialExpressionVertexColor.MaterialExpression=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/GM_Gamemode.GM_Gamemode=1
